- refactoring to not use static class methods anymore - add and update test cases - add builder for module stub content