@@ -7,7 +7,7 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.List;
 
-class ModuleAdapterContentBuilderTest {
+class ModuleStubContentBuilderTest {
     @Test
     void buildModuleContentReturnsFormattedModuleContent() {
         // given
@@ -16,26 +16,48 @@ class ModuleAdapterContentBuilderTest {
             "test-module.test-class",
             List.of("test-decorator"),
             List.of("test-superclass"),
-            List.of(new AnnotatedPythonFunction(
-                "test-class-function",
-                "test-module.test-class.test-class-function",
-                List.of("decorators"),
-                List.of(new AnnotatedPythonParameter(
-                    "only-param",
-                    "test-module.test-class.test-class-function.only-param",
-                    "'defaultValue'",
-                    PythonParameterAssignment.POSITION_OR_NAME,
+            List.of(
+                new AnnotatedPythonFunction(
+                    "test-class-function",
+                    "test-module.test-class.test-class-function",
+                    List.of("decorators"),
+                    List.of(
+                        new AnnotatedPythonParameter(
+                            "only-param",
+                            "test-module.test-class.test-class-function.only-param",
+                            "'defaultValue'",
+                            PythonParameterAssignment.POSITION_OR_NAME,
+                            true,
+                            "typeInDocs",
+                            "description",
+                            Collections.emptyList()
+                        )),
+                    Collections.emptyList(),
                     true,
-                    "typeInDocs",
                     "description",
+                    "fullDocstring",
+                    Collections.emptyList()
+                ),
+                new AnnotatedPythonFunction(
+                    "__init__",
+                    "test-module.test-class.__init__",
+                    List.of("decorators"),
+                    List.of(new AnnotatedPythonParameter(
+                        "only-param",
+                        "test-module.test-class.__init__.only-param",
+                        "'defaultValue'",
+                        PythonParameterAssignment.POSITION_OR_NAME,
+                        true,
+                        "typeInDocs",
+                        "description",
+                        Collections.emptyList()
+                    )),
+                    Collections.emptyList(),
+                    true,
+                    "description",
+                    "fullDocstring",
                     Collections.emptyList()
                 )),
-                Collections.emptyList(),
-                true,
-                "description",
-                "fullDocstring",
-                Collections.emptyList()
-            )),
             "Lorem ipsum",
             "Lorem ipsum",
             Collections.emptyList()
@@ -134,23 +156,23 @@ class ModuleAdapterContentBuilderTest {
         );
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            class test-class:
-                def test-class-function(only-param='defaultValue'):
-                    test-module.test-class.test-class-function(only-param)
+            open class test-class constructor(only-param: Any? or 'defaultValue') {
+                attr only-param: Any?
 
-            def function_module_1(*, param1, param2, param3):
-                test.module_1.function_module_1(param1=param1, param2=param2, param3=param3)
+                fun test-class-function(only-param: Any? or 'defaultValue')
+            }
 
-            def test-function(*, test-parameter=42):
-                test-module.test-function(test-parameter=test-parameter)
+            fun function_module_1(param1: Any?, param2: Any?, param3: Any?) -> test-result: str
+
+            fun test-function(test-parameter: Any? or 42) -> test-result: str
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
@@ -250,33 +272,52 @@ class ModuleAdapterContentBuilderTest {
         );
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            def function_module_1(*, param1, param2, param3):
-                test.module_1.function_module_1(param1=param1, param2=param2, param3=param3)
+            fun function_module_1(param1: Any?, param2: Any?, param3: Any?) -> test-result: str
 
-            def test-function(*, test-parameter=42):
-                test-module.test-function(test-parameter=test-parameter)
+            fun test-function(test-parameter: Any? or 42) -> test-result: str
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
     }
 
     @Test
-    void buildModuleContentWithNoFunctionsReturnsFormattedModuleContent() {
+    void buildModuleContentWithOnlyConstructorReturnsFormattedModuleContent() {
         // given
         AnnotatedPythonClass testClass = new AnnotatedPythonClass(
             "test-class",
             "test-module.test-class",
             List.of("test-decorator"),
             List.of("test-superclass"),
-            Collections.emptyList(),
+            List.of(
+                new AnnotatedPythonFunction(
+                    "__init__",
+                    "test-module.test-class.__init__",
+                    List.of("decorators"),
+                    List.of(new AnnotatedPythonParameter(
+                        "only-param",
+                        "test-module.test-class.__init__.only-param",
+                        "'defaultValue'",
+                        PythonParameterAssignment.POSITION_OR_NAME,
+                        true,
+                        "typeInDocs",
+                        "description",
+                        Collections.emptyList()
+                    )),
+                    Collections.emptyList(),
+                    true,
+                    "description",
+                    "fullDocstring",
+                    Collections.emptyList()
+                )
+            ),
             "Lorem ipsum",
             "Lorem ipsum",
             Collections.emptyList()
@@ -305,15 +346,17 @@ class ModuleAdapterContentBuilderTest {
         );
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            class test-class:
+            open class test-class constructor(only-param: Any? or 'defaultValue') {
+                attr only-param: Any?
+            }
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
@@ -324,34 +367,24 @@ class ModuleAdapterContentBuilderTest {
         // given
         AnnotatedPythonModule testModule = new AnnotatedPythonModule(
             "test-module",
-            List.of(
-                new PythonImport(
-                    "test-import1",
-                    "test-alias"
-                )
-            ),
-            List.of(
-                new PythonFromImport(
-                    "test-from-import1",
-                    "test-declaration1",
-                    null
-                )
-            ),
+            Collections.emptyList(),
+            Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList()
         );
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
     }
 }
+
